Jann 30/objects/Individual__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Individual_Role__c</fullName>
        <label>Associated Individual Role</label>
        <picklist>
            <controllingField>Individual_Role__c</controllingField>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Associated Individuals</relationshipLabel>
        <relationshipName>Associated_Individuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Cases</relationshipLabel>
        <relationshipName>Associated_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Contact__c,  Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName )</formula>
        <label>Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Role__c</fullName>
        <label>Individual Role</label>
        <picklist>
            <picklistValues>
                <fullName>Subject of Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claimant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Type__c</fullName>
        <label>Individual Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-employee Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Outside Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Individual</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Individual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>